# prs-cookbook

./: 404.html  CLAUDE.md  Cargo.toml  Makefile  QA_CHECKLIST.md  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml  ci.yml
.pmat/: tdg-rules.toml
appendix/: qa-checklist.html  toyota-way.html
benches/: parsing.rs
book/: book.toml
book/book/: 404.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/book/appendix/: qa-checklist.html  toyota-way.html
book/book/concepts/: iiur-principles.html  prs-format.html  recipe-context.html  scene-structure.html
book/book/getting-started/: installation.html  quick-start.html  structure.html
book/book/recipes/a-scene-creation/: absolute-layout.html  flex-layout.html  grid-layout.html  index.html  minimal-scene.html  nested-layouts.html
book/book/recipes/b-widget-config/: charts.html  data-table.html  dropdown.html  index.html  slider.html  text-input.html
book/book/recipes/c-resources/: dataset.html  fallback-sources.html  index.html  local-model.html  remote-model.html
book/book/recipes/d-bindings/: chain-actions.html  conditional.html  debounced.html  index.html  model-inference.html  simple-update.html
book/book/recipes/e-theming/: custom-colors.html  custom-fonts.html  dark-preset.html  index.html  light-preset.html
book/book/recipes/f-permissions/: filesystem.html  index.html  minimal.html  network.html
book/book/recipes/g-expressions/: aggregation.html  filter.html  format.html  index.html  select.html  sort-limit.html
book/book/reference/: api.html  errors.html  features.html
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: qa-checklist.md  toyota-way.md
book/src/concepts/: iiur-principles.md  prs-format.md  recipe-context.md  scene-structure.md
book/src/getting-started/: installation.md  quick-start.md  structure.md
book/src/recipes/a-scene-creation/: absolute-layout.md  flex-layout.md  grid-layout.md  index.md  minimal-scene.md  nested-layouts.md
book/src/recipes/b-widget-config/: charts.md  data-table.md  dropdown.md  index.md  slider.md  text-input.md
book/src/recipes/c-resources/: dataset.md  fallback-sources.md  index.md  local-model.md  remote-model.md
book/src/recipes/d-bindings/: chain-actions.md  conditional.md  debounced.md  index.md  model-inference.md  simple-update.md
book/src/recipes/e-theming/: custom-colors.md  custom-fonts.md  dark-preset.md  index.md  light-preset.md
book/src/recipes/f-permissions/: filesystem.md  index.md  minimal.md  network.md
book/src/recipes/g-expressions/: aggregation.md  filter.md  format.md  index.md  select.md  sort-limit.md
book/src/reference/: api.md  errors.md  features.md
concepts/: iiur-principles.html  prs-format.html  recipe-context.html  scene-structure.html
docs/specifications/: cookbook-spec.md
examples/a_scene_creation/: create_absolute_layout.rs  create_flex_layout.rs  create_grid_layout.rs  create_minimal_scene.rs  create_nested_layouts.rs
examples/b_widget_config/: widget_charts.rs  widget_data_table.rs  widget_dropdown.rs  widget_slider.rs  widget_text_input.rs
examples/c_resources/: resource_dataset.rs  resource_fallback_sources.rs  resource_local_model.rs  resource_remote_model.rs
examples/d_bindings/: binding_chain_actions.rs  binding_conditional.rs  binding_debounced.rs  binding_model_inference.rs  binding_simple_update.rs
examples/e_theming/: theme_custom_colors.rs  theme_custom_fonts.rs  theme_preset_dark.rs  theme_preset_light.rs
examples/f_permissions/: permission_filesystem.rs  permission_minimal.rs  permission_network.rs
examples/g_expressions/: expression_aggregation.rs  expression_filter.rs  expression_format.rs  expression_select.rs  expression_sort_limit.rs
getting-started/: installation.html  quick-start.html  structure.html
recipes/a-scene-creation/: absolute-layout.html  flex-layout.html  grid-layout.html  index.html  minimal-scene.html  nested-layouts.html
recipes/b-widget-config/: charts.html  data-table.html  dropdown.html  index.html  slider.html  text-input.html
recipes/c-resources/: dataset.html  fallback-sources.html  index.html  local-model.html  remote-model.html
recipes/d-bindings/: chain-actions.html  conditional.html  debounced.html  index.html  model-inference.html  simple-update.html
recipes/e-theming/: custom-colors.html  custom-fonts.html  dark-preset.html  index.html  light-preset.html
recipes/f-permissions/: filesystem.html  index.html  minimal.html  network.html
recipes/g-expressions/: aggregation.html  filter.html  format.html  index.html  select.html  sort-limit.html
reference/: api.html  errors.html  features.html
src/: context.rs  error.rs  lib.rs  scene.rs
