[package]
name = "prs-cookbook"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Cookbook examples for Presentar Scene Format (.prs) - Isolated, Idempotent, Useful, and Reproducible recipes"
repository = "https://github.com/paiml/prs-cookbook"
keywords = ["presentar", "visualization", "wasm", "declarative-ui", "rust"]
categories = ["visualization", "wasm", "development-tools"]

[lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"
unused_self = "allow"
match_same_arms = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
assigning_clones = "allow"
format_push_string = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
enum_variant_names = "allow"
no_effect_underscore_binding = "allow"
# Allow debug formatting in examples for educational purposes
unnecessary_debug_formatting = "allow"

[features]
default = []
browser = ["wasm-bindgen", "console_error_panic_hook"]
cli = ["clap"]
presentar = []
full = ["browser", "cli", "presentar"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3.14"

# Recipe infrastructure
rand = { version = "0.8", features = ["std_rng"] }
blake3 = "1"

# Optional dependencies
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Performance", "Window", "console"] }

[dev-dependencies]
proptest = "1.5"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

[[example]]
name = "create_minimal_scene"
path = "examples/a_scene_creation/create_minimal_scene.rs"

[[example]]
name = "create_grid_layout"
path = "examples/a_scene_creation/create_grid_layout.rs"

[[example]]
name = "create_flex_layout"
path = "examples/a_scene_creation/create_flex_layout.rs"

[[example]]
name = "create_absolute_layout"
path = "examples/a_scene_creation/create_absolute_layout.rs"

[[example]]
name = "create_nested_layouts"
path = "examples/a_scene_creation/create_nested_layouts.rs"

[[example]]
name = "widget_text_input"
path = "examples/b_widget_config/widget_text_input.rs"

[[example]]
name = "widget_slider"
path = "examples/b_widget_config/widget_slider.rs"

[[example]]
name = "widget_dropdown"
path = "examples/b_widget_config/widget_dropdown.rs"

[[example]]
name = "widget_charts"
path = "examples/b_widget_config/widget_charts.rs"

[[example]]
name = "widget_data_table"
path = "examples/b_widget_config/widget_data_table.rs"

[[example]]
name = "resource_local_model"
path = "examples/c_resources/resource_local_model.rs"

[[example]]
name = "resource_remote_model"
path = "examples/c_resources/resource_remote_model.rs"

[[example]]
name = "resource_dataset"
path = "examples/c_resources/resource_dataset.rs"

[[example]]
name = "resource_fallback_sources"
path = "examples/c_resources/resource_fallback_sources.rs"

[[example]]
name = "binding_simple_update"
path = "examples/d_bindings/binding_simple_update.rs"

[[example]]
name = "binding_debounced"
path = "examples/d_bindings/binding_debounced.rs"

[[example]]
name = "binding_model_inference"
path = "examples/d_bindings/binding_model_inference.rs"

[[example]]
name = "binding_chain_actions"
path = "examples/d_bindings/binding_chain_actions.rs"

[[example]]
name = "binding_conditional"
path = "examples/d_bindings/binding_conditional.rs"

[[example]]
name = "theme_preset_dark"
path = "examples/e_theming/theme_preset_dark.rs"

[[example]]
name = "theme_preset_light"
path = "examples/e_theming/theme_preset_light.rs"

[[example]]
name = "theme_custom_colors"
path = "examples/e_theming/theme_custom_colors.rs"

[[example]]
name = "theme_custom_fonts"
path = "examples/e_theming/theme_custom_fonts.rs"

[[example]]
name = "permission_network"
path = "examples/f_permissions/permission_network.rs"

[[example]]
name = "permission_filesystem"
path = "examples/f_permissions/permission_filesystem.rs"

[[example]]
name = "permission_minimal"
path = "examples/f_permissions/permission_minimal.rs"

[[example]]
name = "expression_select"
path = "examples/g_expressions/expression_select.rs"

[[example]]
name = "expression_filter"
path = "examples/g_expressions/expression_filter.rs"

[[example]]
name = "expression_sort_limit"
path = "examples/g_expressions/expression_sort_limit.rs"

[[example]]
name = "expression_aggregation"
path = "examples/g_expressions/expression_aggregation.rs"

[[example]]
name = "expression_format"
path = "examples/g_expressions/expression_format.rs"
